[gd_scene load_steps=11 format=3 uid="uid://d3exx5mgrhmix"]

[ext_resource type="Script" path="res://Scripts/Areas/Act1/story_scroll.gd" id="1_42ted"]
[ext_resource type="FontFile" uid="uid://bu64if06n8ogu" path="res://Assets/MainFont.ttf" id="2_vpa27"]
[ext_resource type="AudioStream" uid="uid://b5r2b8njhi5dt" path="res://Assets/Audio/Music/IntroBetterLoop.mp3" id="3_biike"]

[sub_resource type="Animation" id="Animation_vymnj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim/Fade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim/Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_fty0i"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_vvtxo"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fv1tj"]
_data = {
"RESET": SubResource("Animation_vymnj"),
"fade_in": SubResource("Animation_fty0i"),
"fade_out": SubResource("Animation_vvtxo")
}

[sub_resource type="Animation" id="Animation_k5x2c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 30)]
}

[sub_resource type="Animation" id="Animation_yea10"]
resource_name = "scroll"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 700), Vector2(0, 30)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_foiy3"]
_data = {
"RESET": SubResource("Animation_k5x2c"),
"scroll": SubResource("Animation_yea10")
}

[node name="StoryIntro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_42ted")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 521.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "Welcome to the Kingdom of Goldedge!
A realm of magic, mystery, and adventure.

One day, a powerful dragon seized control over the kingdom.
It overthrew the King, and took stronghold in Magic Mountain, where all magic is stored!


And so, the King has tasked you, a group of brave adventures, with defeating this dragon!

With your strength and courage, you can bring peace to Goldedge once more!

Go forth, heroes!
The time for adventure is now!"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -98.0
offset_right = 135.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_vpa27")
theme_override_font_sizes/font_size = 50
text = "LET'S GO!"

[node name="FadeOutTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fv1tj")
}

[node name="Fade" type="ColorRect" parent="Anim"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Scroll" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_foiy3")
}
autoplay = "scroll"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_biike")
autoplay = true

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="timeout" from="FadeOutTimer" to="." method="_on_fade_out_timer_timeout"]
[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
[connection signal="animation_finished" from="Scroll" to="." method="_on_scroll_animation_finished"]
